# ros_ws

./: CMakeLists.txt
src/: example.cpp  script.txt
